--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-iron-east-05.cleardb.net
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=heroku_7544b146264de1f
+DB_USERNAME=bae0aa73ad3a4c
+DB_PASSWORD=50491b98
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
