--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "deploy": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "php artisan key:generate",
-            "php artisan migrate:refresh"
+            "php artisan migrate:reset"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
