Flash Messaging with Vue

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
         "deploy": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "php artisan key:generate",
-            "php artisan migrate"
+            "php artisan migrate",
+            "npm install",
+            "npm run production"
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
