--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "deploy": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "php artisan key:generate",
-            "php artisan migrate",
+            "php artisan migrate --force",
             "npm install",
             "npm run production"
         ],
