--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
             "php artisan key:generate",
             "php artisan migrate --force",
-            "npm install",
+            "npm install --no-optional",
             "npm run production"
         ],
         "post-install-cmd": [
